# CliRr

./: .gitignore  Cargo.toml  README.md  store.CliRr
src/: data_store.rs  main.rs  view.rs  vlc_wrapper.rs
src/menu/: menu.rs  mod.rs
src/menu/options/: add_new.rs  change_volume.rs  info.rs  mod.rs  play.rs  quit.rs  show_all.rs  stop.rs
