[package]
name = "CliRr"
version = "0.1.0"
authors = ["SimonMTS <info@simonstriekwold.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.3", features = ["termination"] }
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
kernel32-sys = "0.2.2"

crossterm = "0.13.3"